--- a/templates/app1/ques_view.html
+++ b/templates/app1/ques_view.html
@@ -12,6 +12,15 @@
                 <div class="gp-side-panel" id="ques_ans">
                     <div class="gp-ques-ans-panel-block" id="q{{ forloop.counter0 }}">
                         <div class="gp-ques-block">
+                            {% if  ques.author.userprofile.image %}
+                                <img src="{{ ques.author.userprofile.image.url }}" alt="{{ ques.author }}"
+                                     width="50"
+                                     height="50">
+                            {% else %}
+                                <img src="/media/default-placeholder.png" class="img-circle"
+                                     alt="{{ ques.author }}"
+                                     width="50" height="50">
+                            {% endif %}
                             <h2 class="gp-ques-title">{{ ques.question }}</h2>
                             <p class="gp-ques-date">{{ ques.created }}</p>
                             <p class="card-text-author">Asked by <a
@@ -21,27 +30,44 @@
                         <div class="gp-ques-ans">
 
                             {% if ques.answers.all.exists %}
-                                <p class="gp-ques-ans-count">Total {{ ques.answers.all.count }} answer found!</p>
+                                <div class="gp-total-comments">
+                                    <a onclick="toggleDiv(1)" class="gp-flat-link">
+                                        Total {{ ques.answers.all.count }} answer found!
+                                    </a>
+                                </div>
 
-                                {% for obj2 in ques.answers.all %}
-                                    <div class="gp-ques-ans-block">
-                                        <h4>
-                                            <a href="{% url 'user_profile' obj2.answered_by %}">{{ obj2.answered_by }}</a>
-                                        </h4>
-                                        <h3 class="gp-ques-ans-text">{{ obj2.text }}</h3>
-                                        <p class="gp-ques-ans-date">{{ obj2.created }}</p>
 
-                                        {% if obj2.answered_by_id == user %}
-                                            <div class="bg-margin-top-10">
-                                                <button class="btn btn-danger"
-                                                        onclick="del_answer( {{ 1 }}, {{ obj2.id }})">
-                                                    Delete
-                                                </button>
-                                            </div>
-                                        {% endif %}
-                                    </div>
-                                {% endfor %}
+                                <div id={{ 1 }}>
 
+                                    {% for obj2 in ques.answers.all %}
+                                        <div class="gp-ques-ans-block">
+                                            {% if  obj2.answered_by.userprofile.image %}
+                                                <img src="{{ obj2.answered_by.userprofile.image.url }}"
+                                                     alt="{{ obj2.answered_by }}"
+                                                     width="50"
+                                                     height="50">
+                                            {% else %}
+                                                <img src="/media/default-placeholder.png" class="img-circle"
+                                                     alt="{{ obj2.answered_by }}"
+                                                     width="50" height="50">
+                                            {% endif %}
+                                            <h4>
+                                                <a href="{% url 'user_profile' obj2.answered_by %}">{{ obj2.answered_by }}</a>
+                                            </h4>
+                                            <h3 class="gp-ques-ans-text">{{ obj2.text }}</h3>
+                                            <p class="gp-ques-ans-date">{{ obj2.created }}</p>
+
+                                            {% if obj2.answered_by_id == user %}
+                                                <div class="bg-margin-top-10">
+                                                    <button class="btn btn-danger"
+                                                            onclick="del_answer( {{ 1 }}, {{ obj2.id }})">
+                                                        Delete
+                                                    </button>
+                                                </div>
+                                            {% endif %}
+                                        </div>
+                                    {% endfor %}
+                                </div>
                             {% else %}
                                 <p class="gp-ques-ans-count">No answer found yet!</p>
                             {% endif %}
@@ -70,6 +96,10 @@
 
     {% endif %}
     <script>
+
+        function toggleDiv(divId) {
+            $("#" + divId).slideToggle();
+        }
         function del_answer(ques_ans, answerID) {
 
             // alert(ques_ans)
@@ -117,7 +147,7 @@
                 var element = $(this);
                 element.off('submit');
                 var _id = element.attr("data-id");
-                alert("kk"+_id);
+                alert("kk" + _id);
                 $.ajax({
                     url: {% url 'save_answer' %},
                     type: 'POST',
@@ -127,8 +157,8 @@
                         csrfmiddlewaretoken: '{{ csrf_token }}'
                     },
                     success: function () {
-                        alert("kk");
-                         alert("Created a New Comment");
+                        //alert("kk");
+                        //alert("Created a New Comment");
                         $("#" + "ques_ans").load(" #" + "ques_ans");
                         //$("#1").load(" #1");
                         //$('#text').val("");
