--- a/templates/app1/index.html
+++ b/templates/app1/index.html
@@ -24,10 +24,21 @@
                         {% if  obj.user.userprofile.image %}
                             <img src="{{ obj.user.userprofile.image.url }}" alt="{{ obj.user }}" width="50" height="50">
                         {% else %}
-                            <img src="/media/default-placeholder.png" class="img-circle" alt="{{ obj.user }}" width="50" height="50">
+                            <img src="/media/default-placeholder.png" class="img-circle" alt="{{ obj.user }}" width="50"
+                                 height="50">
                         {% endif %}
-                        <a href="{% url 'user_profile' obj.user %}">{{ obj.user }}</a> with  <strong>{{ obj.member }}</strong> members.
 
+
+                        <a href="{% url 'user_profile' obj.user %}">{{ obj.user }}</a>
+
+                        <strong>{{ obj.member }}</strong> members.
+{#                        <h3>Debug : {{ obj.user.id }}</h3>#}
+                        {% load app1_extras %}
+                        <div id="follow{{ forloop.counter }}">
+                            {% if not obj.user == request.user %}
+                                {% pass_follower_list request.user obj.user.id forloop.counter %}
+                            {% endif %}
+                        </div>
 
                         <div class="gp-div-post-full">
 
@@ -318,21 +329,25 @@
 
                                     </div>
                                     {# ========Default Form ============= #}
-                            <form id="add_answer{{ forloop.counter }}" data-id={{ obj.id }} method="POST"
-                                  class="gp-form-story-comment">
-                                {% csrf_token %}
+                                    <form id="answer_form" data-id={{ obj.id }} method="POST"
+                                          action="{% url 'save_answer' %}" role="form"
+                                          class="gp-side-panel-form">
+                                        {% csrf_token %}
+                                        {% for hidden in a_form.hidden_fields %}
+                                            {{ hidden }}
+                                        {% endfor %}
+                                        <div class="input-group">
+                                            <input name="text" placeholder="Have you the answer?" class="form-control"
+                                                   equired>
+                                            <div class="input-group-btn">
+                                                <button id="bt{{ forloop.counter }}" class="btn btn-default"
+                                                        type="submit">
+                                                    <i class="glyphicon glyphicon-send"></i>
+                                                </button>
+                                            </div>
+                                        </div>
 
-                                <div class="input-group">
-                                    <input class="form-control" type="text" id="text{{ forloop.counter }}"
-                                           maxlength="1000" name="text" required>
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-default" onclick="answerDiv({{ forloop.counter }})"
-                                                type="submit">
-                                            <i class="glyphicon glyphicon-send"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </form>
+                                    </form>
 
 
                                     {# ========Form End ============= #}
@@ -445,30 +460,7 @@
                 });
             });
         }
-        function answerDiv(formId) {
 
-            $("#add_answer" + formId).on('submit', function (event) {
-
-                event.preventDefault();
-                var element = $(this);
-                element.off('submit');
-                var _id = element.attr("data-id");
-                $.ajax({
-                    url: {% url 'save_answer' %},
-                    type: 'POST',
-                    data: {
-                        text: $('#text' + formId).val(),
-                        ques_id: _id,
-                        csrfmiddlewaretoken: '{{ csrf_token }}'
-                    },
-                    success: function () {
-                        // alert("Created a New Comment");
-                        $("#" + "ques_ans").load(" #" + "ques_ans");
-                        //alert("deleted")
-                    }
-                });
-            });
-        }
 
         $('a.gp-like-button').on('click', function (event) {
             event.preventDefault();
@@ -495,11 +487,6 @@
                 }
                 $(totalLikeTxt).html(response.totalLikes);
             });
-        });
-
-
-        $("#button321").click(function () {
-            $("#item321").toggle();
         });
 
 
